fix: update dark mode toggle implementation and adjust responsive styles

--- a/src/styles/components/header.less
+++ b/src/styles/components/header.less
@@ -2,8 +2,8 @@
 <---     Mobile Navigation      -->
 <--- -------------------------- -*/
 
-/* Mobile - 1023px */
-@media only screen and (max-width: 63.9375rem) {
+/* Mobile - 1195px */
+@media only screen and (max-width: 74.6875rem) {
   body {
     &.cs-open {
       overflow: hidden;
@@ -65,6 +65,7 @@
       display: flex;
       justify-content: flex-end;
       align-items: center;
+      gap: (16/16rem);
     }
 
     .cs-logo {
@@ -80,6 +81,7 @@
       align-items: center;
       gap: (8/16rem);
       z-index: 10;
+      order: 1;
 
       img {
         width: 25%;
@@ -104,13 +106,18 @@
       /* 44px - 48px */
       width: clamp(2.75rem, 6vw, 3rem);
       height: clamp(2.75rem, 6vw, 3rem);
-      margin: 0 0 0 auto;
+      margin: 0;
       background-color: transparent;
       border: none;
       border-radius: (4/16rem);
       display: flex;
       justify-content: center;
       align-items: center;
+      order: 3;
+    }
+
+    .cs-nav {
+      order: 2;
     }
 
     .cs-active {
@@ -294,7 +301,7 @@
 }
 
 /* Tablet and up - Show logo text */
-@media only screen and (min-width: 48rem) and (max-width: 63.9375rem) {
+@media only screen and (min-width: 48rem) and (max-width: 74.6875rem) {
   #cs-navigation {
     .cs-logo {
       .cs-logo-text {
@@ -306,7 +313,7 @@
 }
 
 /* Dark Mode */
-@media only screen and (max-width: 63.9375rem) {
+@media only screen and (max-width: 74.6875rem) {
   body.dark-mode {
     #cs-navigation {
       background-color: var(--dark);
@@ -337,8 +344,8 @@
 <---     Navigation Dropdown    -->
 <--- -------------------------- -*/
 
-/* Mobile - 1023px */
-@media only screen and (max-width: 63.9375rem) {
+/* Mobile - 1195px */
+@media only screen and (max-width: 74.6875rem) {
   #cs-navigation {
     .cs-dropdown {
       color: var(--bodyTextColorWhite);
@@ -427,8 +434,8 @@
   }
 }
 
-/* Desktop - 1024px */
-@media only screen and (min-width: 64rem) {
+/* Desktop - 1196px */
+@media only screen and (min-width: 74.75rem) {
   #cs-navigation {
     .cs-dropdown {
       position: relative;
@@ -605,8 +612,8 @@
 <---     Desktop Navigation     -->
 <--- -------------------------- -*/
 
-/* Small Desktop - 1024px */
-@media only screen and (min-width: 64rem) {
+/* Small Desktop - 1196px */
+@media only screen and (min-width: 74.75rem) {
   #cs-navigation {
     /* remove the font family so the Stitch inherits the fonts from your global stylesheet */
     font-family: "Roboto", "Arial", sans-serif;
@@ -719,7 +726,7 @@
 }
 
 /* Dark Mode */
-@media only screen and (min-width: 64rem) {
+@media only screen and (min-width: 74.75rem) {
   body.dark-mode {
     #cs-navigation {
       background-color: var(--dark);
